--- a/apps/web/src/content/docs/docs/design-principles.mdx
+++ b/apps/web/src/content/docs/docs/design-principles.mdx
@@ -8,12 +8,12 @@ sidebar:
 `bejamas/ui` is an Astro-native component library. The way components are structured is as important as how they look.
 
 1. **Flat-file structure.** One file = one component. Markup, variants, and component parts (e.g. `header`, `content`, `footer`) live together.
-2. **Docs in code.** Docs are auto generated from the comments; there’s no separate source of truth to maintain.
+2. **Docs in code.** Documentation is auto-generated from comments within each component file; there’s no separate source of truth to maintain.
 3. **Themeable.** Components use token-based classes (e.g. `bg-background`, `text-primary`) instead of hard-coded colors.
 4. **Composable.** We prefer small primitives over heavy abstractions. Code should be easy to read, copy, and modify.
 5. **Astro-native, zero-JS by default.** Components are server-first and ship no client JavaScript unless they truly need it.
 6. **Framework-agnostic.** We don’t bundle React, Vue, or any other client framework. You’re free to add your own [Astro islands](https://docs.astro.build/en/concepts/islands/) or framework of choice on top where needed.
-7. **shadcn/ui aligned.** Where it makes sense we mirror shadcn’s DOM structure, class names, and `data-slot` attributes so we can reuse ideas, examples, and registry content.
+7. **shadcn/ui aligned.** shadcn/ui aligned. We follow shadcn’s markup patterns and class naming where useful, so you can reuse component examples and patterns from the shadcn registry and adapt them easily for Astro.
 
 ---
 
