--- a/apps/web/src/content/docs/docs/installation.mdx
+++ b/apps/web/src/content/docs/docs/installation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: A guide in my new Starlight docs site.
+description: Install `bejamas/`ui` in a new or existing Astro project.
 sidebar:
   order: 2
 ---
