docs: improve components description

--- a/apps/web/src/content/docs/docs/installation.mdx
+++ b/apps/web/src/content/docs/docs/installation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: Install `bejamas/`ui` in a new or existing Astro project.
+description: Install bejamas/ui in a new or existing Astro project.
 sidebar:
   order: 2
 ---
