--- a/apps/web/src/content/docs/docs/monorepo.mdx
+++ b/apps/web/src/content/docs/docs/monorepo.mdx
@@ -1,6 +1,6 @@
 ---
 title: Monorepo
-description: A guide for using `bejamas/ui` in a monorepo setup.
+description: A guide for using bejamas/ui in a monorepo setup.
 sidebar:
   order: 9
 ---
