feat(docs): work more on copy and rwd

--- a/apps/web/src/content/docs/docs/auto-generated-docs.mdx
+++ b/apps/web/src/content/docs/docs/auto-generated-docs.mdx
@@ -21,6 +21,8 @@ This keeps your documentation:
 - easy to maintain
 - fully Astro-native
 
+![Auto-generated docs flow](/docs/auto-generated-docs.png "Auto-generated docs flow")
+
 ## Build the docs
 
 You can generate all component docs using the CLI:
