--- a/apps/web/src/content/docs/templates.mdx
+++ b/apps/web/src/content/docs/templates.mdx
@@ -16,7 +16,7 @@ hero:
       variant: minimal
 ---
 
-import Footer from "@bejamas/ui/components/Footer.astro";
+import Footer from "@/ui-next/Footer.astro";
 import LinkGroup from "@bejamas/ui/components/LinkGroup.astro";
 
 <Footer>
