fix(docs): typo

--- a/apps/web/src/content/docs/docs/auto-generated-docs.mdx
+++ b/apps/web/src/content/docs/docs/auto-generated-docs.mdx
@@ -144,7 +144,7 @@ Below is a complete example from the `Button` component in the `bejamas/ui` pack
  * @title Button
  * @description Displays a button or a component that looks like a button.
  *
- * @example
+ * @preview
  *
  * <div class="flex flex-wrap items-center gap-2 md:flex-row">
  *   <Button>Button</Button>
