fix: seo audit issues

--- a/apps/web/src/content/docs/templates.mdx
+++ b/apps/web/src/content/docs/templates.mdx
@@ -25,7 +25,7 @@ import { LinkGroup, LinkGroupTitle, LinkGroupList, LinkGroupItem } from "@bejama
     <LinkGroup>
       <LinkGroupTitle>Resources</LinkGroupTitle>
       <LinkGroupList>
-        <LinkGroupItem><a href="/blog">Blog</a></LinkGroupItem>
+        <LinkGroupItem><a href="#">Blog</a></LinkGroupItem>
         <LinkGroupItem><a href="/docs">Documentation</a></LinkGroupItem>
       </LinkGroupList>
     </LinkGroup>
@@ -33,7 +33,7 @@ import { LinkGroup, LinkGroupTitle, LinkGroupList, LinkGroupItem } from "@bejama
       <LinkGroupTitle>Company</LinkGroupTitle>
       <LinkGroupList>
         <LinkGroupItem><a href="/">Home</a></LinkGroupItem>
-        <LinkGroupItem><a href="/about">About</a></LinkGroupItem>
+        <LinkGroupItem><a href="#">About</a></LinkGroupItem>
       </LinkGroupList>
     </LinkGroup>
   </div>
